# Panes

./: .gitignore  ARCHITECTURE.md  BRD.md  CLAUDE.md  Cargo.toml  EXPERIENCE.md  GAPS.md  LICENSE.md  PRFAQ.md  PRODUCT.md  README.md  REDDIT-RESEARCH.md  index.html  package-lock.json  package.json  playwright-fullstack.config.ts  playwright.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/panes-adapters/: Cargo.toml
crates/panes-adapters/src/: fake.rs  lib.rs
crates/panes-adapters/src/claude/: mod.rs  parser.rs  risk.rs
crates/panes-adapters/tests/: claude_integration.rs
crates/panes-app/: Cargo.toml  tauri.conf.json
crates/panes-app/capabilities/: default.json
crates/panes-app/icons/: icon.icns
crates/panes-app/src/: commands.rs  lib.rs  main.rs  test_bridge.rs
crates/panes-core/: Cargo.toml
crates/panes-core/src/: db.rs  error.rs  features.rs  git.rs  lib.rs  session.rs
crates/panes-cost/: Cargo.toml
crates/panes-cost/src/: lib.rs
crates/panes-events/: Cargo.toml
crates/panes-events/src/: lib.rs
crates/panes-memory/: Cargo.toml  mem0_server.py
crates/panes-memory/src/: lib.rs  manager.rs  mem0_store.rs  sidecar.rs  sqlite_store.rs  types.rs
crates/panes-memory/tests/: mem0_integration.rs  memory_wiring.rs
crates/panes-scheduler/: Cargo.toml
crates/panes-scheduler/src/: actions.rs  executor.rs  lib.rs  ticker.rs  types.rs
docs/: ARCHITECTURE.md  GAPS.md
e2e/: app.spec.ts  completion-actions.spec.ts  config-bar.spec.ts  context-indicator.spec.ts  cost.spec.ts  feed.spec.ts  gates.spec.ts  memory.spec.ts  negative.spec.ts  persistence.spec.ts  steer.spec.ts  subagent.spec.ts  thread-lifecycle.spec.ts  transcript.spec.ts  workspace.spec.ts
e2e-fullstack/: cancel-thread.spec.ts  cost-tracking.spec.ts  error-handling.spec.ts  feed-view.spec.ts  gate-approve.spec.ts  gate-reject.spec.ts  git-commit.spec.ts  git-revert.spec.ts  global-setup.ts  global-teardown.ts  happy-path.spec.ts  helpers.ts  memory-extraction.spec.ts  model-selection.spec.ts  persistence.spec.ts  routines.spec.ts  steer-resume.spec.ts  thread-resume.spec.ts  workspace-guard.spec.ts
e2e-fullstack/fixtures/: git-workspace.ts  tauri-app.ts
sidecar/: mem0_sidecar.py  requirements.txt  test_sidecar.py
src/: App.tsx  main.tsx  styles.css
src/components/: CompletionCard.tsx  CostBadge.tsx  FeedView.tsx  FluidBackground.tsx  GateCard.test.tsx  GateCard.tsx  MemoryPanel.test.tsx  MemoryPanel.tsx  RoutineBadge.tsx  RoutineForm.tsx  RoutinePanel.tsx  SettingsPanel.tsx  Sidebar.tsx  ThreadList.tsx  ThreadView.test.ts  ThreadView.tsx  TranscriptView.test.tsx  TranscriptView.tsx
src/lib/: api.ts  contextUsage.test.ts  contextUsage.ts  cost.test.ts  cost.ts  eventMapper.test.ts  eventMapper.ts  groupToolEvents.test.ts  groupToolEvents.ts  model.test.ts  tauriBridge.ts  tauriMock.ts  threadHelpers.ts  utils.test.ts  utils.ts
src/test/: setup.ts
src/types/: errors.ts  events.ts  index.ts
