[package]
name = "panes-adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
panes-events = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
regex = "1"
async-stream = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"
