[package]
name = "panes-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
panes-events = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"
